# dadi-runtime

./: .env.example  CHANGELOG.md  DADI-Runtime_README.md  Makefile  README.md  RELEASE_ATTESTATION.json  RELEASE_MANIFEST.json  RELEASE_STATUS.json  RUNBOOK_COMPLIANCE.md  VERSION  alembic.ini  docs_DELIVERABLES.md  docs_DELIVERY_BUNDLES.md
deploy/reference/gateway/: Dockerfile  alembic.ini  pyproject.toml
schemas/: index.json  (+6 more)
services/artifact-store/: README.md  pyproject.toml
services/artifact-store/dadi_store/: app.py  db.py  hashing.py  models.py  store.py
services/artifact-store/examples/: client_put_json.py
services/gateway/: README.md  pyproject.toml
services/gateway/dadi_gateway/: app.py  audit.py  auth_oidc.py  aws_kms_signing.py  bundle_download_routes.py  bundle_signing_adapter.py  bundle_utils.py  bundles_routes.py  closure_verify.py  compliance_health.py  db.py  db_tenant.py  deliverables_routes.py  dev_ed25519_signing.py  diff_routes.py  evidence_routes.py  evidence_validator.py  health_extra.py  idempotency.py  jwt_auth.py  kms_public_key_cache.py  manifest_validator.py  models.py  planner.py  rate_limit.py  rate_limit_redis.py  request_size_limit.py  revocation_routes.py  schema_check.py  security_startup_check.py  signing_provider.py  store.py  streaming_utils.py
services/gateway/examples/: commands.sh
services/gateway/migrations/: checksums.json  env.py
services/gateway/sql/: deliverable_bundles.sql  enable_rls.sql  idempotency.sql  regeneration_plans.sql  revocation.sql  signing_public_keys.sql  tenant_isolation_migration.sql
(+207 files in other folders)
