[project]
name = "dadi-gateway"
version = "0.1.0"
description = "Thin FastAPI gateway that unifies DADI artifact store, lineage, cache, and regeneration planning endpoints."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "pydantic>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "boto3>=1.28",
  "PyJWT[crypto]>=2.8",
  "requests>=2.31",
  "redis>=5.0",
  "jsonschema>=4.18",
  "cryptography>=42.0",
]
