[project]
name = "dadi-gateway"
version = "0.1.0"
description = "Thin FastAPI gateway that unifies DADI artifact store, lineage, cache, and regeneration planning endpoints."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "pydantic>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "SQLAlchemy>=2.0",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dadi_gateway*"]
exclude = ["sql*"]